Fix using wrong margin direction

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -51,7 +51,7 @@ ul {
 }
 
 .right-elements {
-  margin-right: auto;
+  margin-left: auto;
 }
 
 .right-elements, .left-elements {
